fixed “remember” checkbox alignment

--- a/assets/css/lsx-login.scss
+++ b/assets/css/lsx-login.scss
@@ -30,6 +30,7 @@
 
 .loginform p.login-remember input{
     display: inline;
+    float: none;
     height: auto;
     margin-top: -3px;
     width: auto;
